--- a/masters/translations/de.po
+++ b/masters/translations/de.po
@@ -5,21 +5,23 @@
 # Generated from files:
 #  fma_admin.inc: n/a
 #  fratler_masters.module: n/a
-#  fratler_masters.install: n/a
 #  fratler_masters.info: n/a
+#  fratler_masters.install: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2014-05-31 03:30+0100\n"
-"PO-Revision-Date: 2014-05-31 03:30+0100\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2014-05-31 17:04+0100\n"
+"PO-Revision-Date: 2014-05-31 17:57+0200\n"
+"Last-Translator: Daniel aka Mushu <delta@fratler.de>\n"
 "Language-Team: German <EMAIL@ADDRESS>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.5.1.1\n"
+"X-POOTLE-MTIME: 1401555478.000000\n"
 
 #: fma_admin.inc:29;77 fratler_masters.module:104
 msgid "Name"
@@ -177,19 +179,19 @@ msgstr "Maschinenlesbarer Name"
 
 #: fratler_masters.module:120
 msgid "Adjustment roles"
-msgstr ""
+msgstr "Anpassungsrollen"
 
 #: fratler_masters.module:120
 msgid "Roles permitted to adjust the account."
-msgstr ""
+msgstr "Benutzerrollen, die das Konto anpassen können."
 
 #: fratler_masters.module:124
 msgid "Transfer roles"
-msgstr ""
+msgstr "Transaktionsrollen"
 
 #: fratler_masters.module:124
 msgid "Roles permitted to transfer from the account."
-msgstr ""
+msgstr "Benutzerrollen, die mit diesem Konto Transaktionen vornehmen können."
 
 #: fratler_masters.module:128
 msgid "Balance"
@@ -197,7 +199,7 @@ msgstr "Kontostand"
 
 #: fratler_masters.module:132
 msgid "Total transactions"
-msgstr ""
+msgstr "Transaktionen (gesamt)"
 
 #: fratler_masters.module:138
 msgid "Last transaction"
@@ -205,7 +207,7 @@ msgstr "Letzte Transaktion"
 
 #: fratler_masters.module:139
 msgid "#@id (@date)"
-msgstr ""
+msgstr "#@id (@date)"
 
 #: fratler_masters.module:142
 msgid "Fingerprint"
@@ -217,95 +219,90 @@ msgstr "Keine Daten verfügbar."
 
 #: fratler_masters.module:202
 msgid "%acc_name: Display Master Account statement"
-msgstr ""
+msgstr "%acc_name: Kontoauszug anzeigen"
 
 #: fratler_masters.module:206
 msgid "%acc_name: Adjust Master Account"
-msgstr ""
+msgstr "%acc_name: Konto anpassen"
 
 #: fratler_masters.module:210
 msgid "%acc_name: Transfer funds"
-msgstr ""
+msgstr "%acc_name: Transaktionen durchführen"
 
 #: fratler_masters.module:222
 msgid "Fratler Master Account"
-msgstr ""
+msgstr "Fratler-Masterkonto"
 
 #: fratler_masters.module:370
 msgid "Created Master Account %master."
-msgstr ""
+msgstr "Masterkonto %master angelegt."
 
 #: fratler_masters.module:378
 msgid "Updated Master Account %master."
-msgstr ""
+msgstr "Masterkonto %master aktualisiert."
 
 #: fratler_masters.module:428
 msgid "Could not reassign transactions from @entity."
-msgstr ""
+msgstr "Transaktionen von @entity konnten nicht übertragen werden."
 
 #: fratler_masters.module:592
 msgid "Master Accounts:"
-msgstr ""
+msgstr "Masterkonten:"
 
 #: fratler_masters.module:452
 msgid "Deleted Master Account %master."
 msgid_plural "Deleted @count Master Accounts."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Masterkonto %master wurde gelöscht."
+msgstr[1] "Es wurden @count Masterkonten gelöscht."
 
-#: fratler_masters.module:31
-msgid "Fratler Master"
-msgstr ""
+#: fratler_masters.module:31 fratler_masters.info:0
+msgid "Fratler Masters"
+msgstr "Fratler Masterkonten"
 
 #: fratler_masters.module:32
 msgid "Configure Master Accounts for fratler_suite."
-msgstr ""
+msgstr "Masterkonten der fratler_suite konfigurieren."
 
 #: fratler_masters.module:39
 msgid "Create Master Account"
-msgstr ""
+msgstr "Masterkonto erstellen"
 
 #: fratler_masters.module:40
 msgid "Create a new Master Account"
-msgstr ""
+msgstr "Ein neues Masterkonto erstellen"
 
 #: fratler_masters.module:48
 msgid "Master Account"
-msgstr ""
+msgstr "Masterkonto"
 
 #: fratler_masters.module:49
 msgid "Display Master Account data."
-msgstr ""
+msgstr "Daten des Masterkontos anzeigen"
 
 #: fratler_masters.module:56;57
 msgid "Edit Master Account"
-msgstr ""
+msgstr "Masterkonto bearbeiten"
 
 #: fratler_masters.module:65;66;74;75
 msgid "Delete Master Account"
-msgstr ""
+msgstr "Masterkonto löschen"
 
 #: fratler_masters.install:60
 msgid "Updated one Master Account record."
 msgid_plural "Updated @count Master Account records."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Ein Masterkonto wurde aktualisiert."
+msgstr[1] "Es wurden @count Masterkonten aktualisiert."
 
 #: fratler_masters.install:73
 msgid "Deactivated one Master Account."
 msgid_plural "Deactivated @count Master Accounts."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Ein Masterkonto wurde deaktiviert."
+msgstr[1] "Es wurden @count Masterkonten deaktiviert."
 
 #: fratler_masters.info:0
-msgid "Fratler Masters"
-msgstr ""
-
-#: fratler_masters.info:0
-msgid "Master Accounts for Fratler Money"
-msgstr ""
+msgid "Fratler Accounts that are not tied to a given user."
+msgstr "Fratler-Konten, die nicht an einzelne Benutzer gebunden sind."
 
 #: fratler_masters.info:0
 msgid "fratler_suite"
 msgstr "fratler_suite"
-
